// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guest schema byName: should work 1`] = `
Object {
  "data": Object {
    "byName": Object {
      "email": "andy@gmail.com",
      "firstName": "Andy",
      "id": "ah",
      "lastName": "Huang",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema create guest: should work 1`] = `
Object {
  "data": Object {
    "createGuest": Object {
      "NIK": "12345",
      "company": null,
      "email": "john@example.com",
      "firstName": "John",
      "id": "some-id",
      "lastName": "Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema getGuest: should work 1`] = `
Object {
  "data": Object {
    "getGuest": Object {
      "email": "andy@gmail.com",
      "firstName": "Andy",
      "id": "ah",
      "lastName": "Huang",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema listGuest: should work 1`] = `
Object {
  "data": Object {
    "listGuest": Array [
      Object {
        "email": "andy@gmail.com",
        "firstName": "Andy",
        "id": "ah",
        "lastName": "Huang",
      },
      Object {
        "email": "budy@gmail.com",
        "firstName": "Budy",
        "id": "bh",
        "lastName": "Harjo",
      },
      Object {
        "email": "charlie@gmail.com",
        "firstName": "Charlie",
        "id": "cp",
        "lastName": "Putt",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
